--- a/package.json
+++ b/package.json
@@ -9,16 +9,21 @@
     "lint": "next lint",
     "db:migrate": "npx prisma migrate dev"
   },
-  "prisma":{
-     "schema": "src/prisma/schema.prisma"
+  "prisma": {
+    "schema": "src/prisma/schema.prisma"
   },
   "dependencies": {
+    "@auth/mongodb-adapter": "^3.9.1",
     "@auth/prisma-adapter": "^2.9.1",
     "@prisma/client": "^6.10.0",
     "@radix-ui/react-dialog": "^1.1.14",
+    "@radix-ui/react-slot": "^1.2.3",
+    "bcryptjs": "^3.0.2",
+    "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "html2canvas": "^1.4.1",
     "jspdf": "^3.0.1",
+    "mongodb": "^6.17.0",
     "next": "15.3.3",
     "next-auth": "^5.0.0-beta.28",
     "react": "^19.0.0",
