--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@auth/mongodb-adapter": "^3.9.1",
     "@auth/prisma-adapter": "^2.9.1",
     "@prisma/client": "^6.10.0",
+    "@radix-ui/react-accordion": "^1.2.11",
     "@radix-ui/react-dialog": "^1.1.14",
     "@radix-ui/react-slot": "^1.2.3",
     "@tanstack/react-query": "^5.80.7",
