--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@auth/mongodb-adapter": "^3.9.1",
     "@auth/prisma-adapter": "^2.9.1",
+    "@google/genai": "^1.7.0",
     "@prisma/client": "^6.10.0",
     "@radix-ui/react-accordion": "^1.2.11",
     "@radix-ui/react-dialog": "^1.1.14",
