--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "clsx": "^2.1.1",
     "html2pdf.js": "^0.9.0",
     "mongodb": "^6.17.0",
-    "next": "15.3.3",
+    "next": "^15.3.4",
     "next-auth": "^5.0.0-beta.28",
     "next-themes": "^0.4.6",
     "react": "^19.0.0",
