--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "next": "^15.3.4",
     "next-auth": "^5.0.0-beta.28",
     "next-themes": "^0.4.6",
+    "openai": "^5.8.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
