--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@radix-ui/react-dialog": "^1.1.14",
     "@radix-ui/react-slot": "^1.2.3",
     "@tanstack/react-query": "^5.80.7",
+    "@types/nodemailer": "^6.4.17",
     "axios": "^1.10.0",
     "bcryptjs": "^3.0.2",
     "class-variance-authority": "^0.7.1",
@@ -30,6 +31,7 @@
     "next": "^15.3.4",
     "next-auth": "^5.0.0-beta.28",
     "next-themes": "^0.4.6",
+    "nodemailer": "^6.10.1",
     "openai": "^5.8.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
